[package]
name = "synesthesia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
cpal = "0.13.5"
lerp = "0.4.0"
macroquad = { version = "0.3.13", default-features = false }
scopeguard = "1.1.0"
